Fixed: AJAX error when loaded content doesn't contain input text fields Fixed: IGOS admin template main menu color change so it more readable (CSS) Added: README file

--- a/admin/admin_template/igos/style.css
+++ b/admin/admin_template/igos/style.css
@@ -49,11 +49,11 @@ a {
     padding: 11px;
     font-size: 11px;
     font-weight: bold;
-    color: #FFF;
+    color: #555;
     text-decoration: none;
 }
 
-#menuList a.menu:hover,a.menuCurrent {
+#menuList a.menuCurrent {
     color: #000;
     background: url(media/tri.png) no-repeat bottom center;
 }
